--- a/fluentd-daemonset-elasticsearch.yaml
+++ b/fluentd-daemonset-elasticsearch.yaml
@@ -1,3 +1,21 @@
+apiVersion: v1
+data:
+  index_template.json: |-
+    {
+        "index_patterns": [
+            "logstash-default*"
+        ],
+        "settings": {
+            "index": {
+                "number_of_replicas": "3"
+            }
+        }
+    }
+kind: ConfigMap
+metadata:
+  name: es-template
+  namespace: kube-system
+---
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
@@ -50,6 +68,16 @@ spec:
             value: "ThisIsASuperLongToken"
           - name: LOGZIO_LOGTYPE
             value: "kubernetes"
+          # ILM parameters
+          # ==============
+          - name: FLUENT_ELASTICSEARCH_ENABLE_ILM
+            value: "true"
+          - name: FLUENT_ELASTICSEARCH_ILM_POLICY
+            value: '{ "policy": { "phases": { "hot": { "min_age": "0ms", "actions": { "rollover": { "max_age": "1d", "max_size": "5gb" } } }, "delete": { "min_age": "2d", "actions": { "delete": {}}}}}}'
+          - name: FLUENT_ELASTICSEARCH_TEMPLATE_FILE
+            value: /host/index_template.json
+          - name: FLUENT_ELASTICSEARCH_TEMPLATE_NAME
+            value: "logstash-default"
         resources:
           limits:
             memory: 200Mi
@@ -62,6 +90,9 @@ spec:
         - name: varlibdockercontainers
           mountPath: /var/lib/docker/containers
           readOnly: true
+        - name: es-template
+          mountPath: /host
+          readOnly: true
       terminationGracePeriodSeconds: 30
       volumes:
       - name: varlog
@@ -70,3 +101,6 @@ spec:
       - name: varlibdockercontainers
         hostPath:
           path: /var/lib/docker/containers
+      - name: es-template
+        configMap:
+          name: es-template
